--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -49,3 +49,4 @@
 @import './components/body/realestate/feed/detailedView';
 @import './components/body/realestate/feed/detailedViewAds';
 @import './components/body/realestate/feed/detailedViewDetails';
+@import './components/personal/myItems';
