favorite items in personal zone wired

--- a/src/styles/components/body/realestate/feed/_detailedView.scss
+++ b/src/styles/components/body/realestate/feed/_detailedView.scss
@@ -91,6 +91,9 @@
         padding-left: $std-size;
         padding-top: $std-size;
         text-align: left;
+        span {
+          @extend .summary__left__price;
+        }
         .symbol__nis{
           background-color: inherit;
           padding-right: $std-size * 0.2;
