add top menu left buttons and personal zone fixes

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -50,3 +50,7 @@
 @import './components/body/realestate/feed/detailedViewAds';
 @import './components/body/realestate/feed/detailedViewDetails';
 @import './components/personal/myItems';
+@import './components/body/realestate/feed/feedHeader';
+@import './components/mainMenu/personalZoneButton';
+@import './components/mainMenu/savedItemButton';
+@import './components/mainMenu/notificationButton'
