--- a/src/styles/settings/_colors.scss
+++ b/src/styles/settings/_colors.scss
@@ -11,6 +11,7 @@ $theme-footer-background: #363636;
 $theme-highlight-gray: #dbdbd1;
 $theme-feed-item: #fdf9c5;
 $theme-main-color: #ff7100;
+$theme-ribbon-alt: #0495ff;
 $theme-selected: #eeeeee;
 $theme-hovered: #f9f9f9;
 $theme-text: #363636;
