filtered search rooms and price wired

--- a/src/styles/components/body/realestate/searchBar/_goSearch.scss
+++ b/src/styles/components/body/realestate/searchBar/_goSearch.scss
@@ -1,4 +1,4 @@
-.go-search {
+.go-search__simple {
     @extend .searchBar-button !optional;
     background: $theme-main-color;
     .go-search__header {
